[package]
name = "iris_playground"
version = "0.1.0"
edition = "2021"
authors = "TM-MT"
repository = "https://github.com/TM-MT/iris_playground"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.25.1", features = ["lazy"] }
reqwest =  { version = "0.11.12", features = ["blocking"] }
color-eyre = "0.6"
plotters = "0.3.4"
